# parcittox

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac  parcittox.kdevelop
data/: Makefile.am  parcittox-startup.desktop.in  parcittox.desktop.in  parcittox.xpm
dittox/: Makefile.am  Makefile.dbg  dittox.cpp  dittox.h
dittox/ditto/: ServerDefines.h
dittox/ditto/EncryptDecrypt/: Encryption.cpp  IEncryption.h  MemUtil.cpp  NewRandom.cpp  rijndael.cpp  rijndael.h  sha2.cpp  sha2.h
dittox/win_compat/: iencryption.h  win_compat.h  windows.h
src/: Makefile.am  attr_list.c  attr_list.h  history.c  history.h  main.c  main.h  parcellite.h  preferences.c  preferences.h  utils.c  utils.h
